# quantbr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e26cf760917_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: __init__.py  agents.py  auth.py  lab.py  market.py  news.py  orderflow.py  reference.py  signals.py  ws.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/feed/: __init__.py  subscriber.py
backend/app/indicators/: __init__.py  base.py  bollinger.py  delta.py  imbalance.py  moving_average.py  rsi.py  volume_profile.py  vwap.py
backend/app/market_data/: __init__.py  fetcher.py  news_fetcher.py
backend/app/models/: __init__.py  audit_log.py  instrument.py  snapshot.py  trade.py  user.py
backend/app/quantlab/: __init__.py  registry.py  sandbox.py  sdk.py
backend/app/schemas/: __init__.py  auth.py  market.py  signal.py
backend/app/security/: __init__.py  audit.py  auth.py  rbac.py
backend/app/signals/: __init__.py  base.py  engine.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: conftest.py  test_indicators.py  test_signals.py
docs/: architecture.md  backend.md  feed.md  frontend.md  iso-compliance.md  setup.md
feed/: CMakeLists.txt
feed/include/: order_book.h  session_manager.h  step_client.h  umdf_parser.h  zmq_publisher.h
feed/src/: main.cpp  order_book.cpp  session_manager.cpp  step_client.cpp  umdf_parser.cpp  zmq_publisher.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/agents/: AgentSidebar.tsx
frontend/src/components/common/: GaugeChart.tsx  PanelBox.tsx  ValueCell.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/panels/: AggressionPanel.tsx  CommoditiesPanel.tsx  DIFuturesPanel.tsx  DIYieldCurve.tsx  DeltaPanel.tsx  EconomicCalendar.tsx  FlowChart.tsx  FlowPanel.tsx  ForceGauges.tsx  IndicesPanel.tsx  NewsPanel.tsx  OrderBookPanel.tsx  QuantLabPanel.tsx  SectorHeatmap.tsx  (+5 more)
frontend/src/hooks/: useAuth.ts  useReferenceData.ts  useWebSocket.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/store/: authStore.ts  marketStore.ts
frontend/src/types/: auth.ts  market.ts  orderflow.ts
