[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbr-backend"
version = "1.0.0"
description = "QuantBR — quantitative dashboard backend for B3 markets"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    # Validation & settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    # Security — ISO 27001 A.9, A.10
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",            # passlib incompatible with bcrypt>=4.1 (__about__ removed)
    # Caching & pub/sub
    "redis[hiredis]>=5.0.4",
    # Feed consumer
    "pyzmq>=26.0.3",
    # Structured logging — ISO 27001 A.12
    "structlog>=24.1.0",
    # Metrics — ISO 25010 performance efficiency
    "prometheus-client>=0.20.0",
    "starlette-prometheus>=0.9.0",
    # Utilities
    "orjson>=3.10.3",
    "httpx>=0.27.0",
    # Safe XML parsing for RSS feeds — guards against entity expansion attacks
    "defusedxml>=0.7.1",
    # AI agents — Anthropic Claude API
    "anthropic>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
